--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -54,7 +54,7 @@ ServerTokens OS
 #
 # Do NOT add a slash at the end of the directory path.
 #
-ServerRoot "/home/neerajk/HTML5Application"
+ServerRoot "/home/inf124grp23/HTML5Application"
 
 
 #
@@ -134,7 +134,7 @@ MaxRequestsPerChild  0
 # prevent Apache from glomming onto all bound IP addresses (0.0.0.0)
 #
 #Listen 12.34.56.78:80
-Listen 8080
+Listen 56077
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -219,7 +219,7 @@ LoadModule version_module modules/mod_version.so
 #
 # Load config files from the config directory "/etc/httpd/conf.d".
 #
-Include conf.d/*.conf
+Include /etc/httpd/conf.d/*.conf
 
 #
 # ExtendedStatus controls whether Apache will generate "full" status
@@ -290,7 +290,7 @@ UseCanonicalName Off
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/home/neerajk/HTML5Application/public_html"
+DocumentRoot "/home/inf124grp23/HTML5Application/public_html"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -315,7 +315,7 @@ DocumentRoot "/home/neerajk/HTML5Application/public_html"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/home/neerajk/HTML5Application/public_html">
+<Directory "/home/inf124grp23/HTML5Application/public_html">
 
 #
 # Possible values for the Options directive are "None", "All",
